<resources>
    <string name="app_name">Dirt Simple Comms</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_msgs">Erase Messages</string>
    <string name="action_clear_peers">Erase Peer Stats</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_connect">Connect</string>
    <string name="action_scan">Find Devices</string>
    <string name="action_sync_datetime">Sync Datetime</string>
    <string name="action_usb_ble_pair">Pair Device</string>
    <string name="action_status">Status</string>

    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">DSCv3 Outboarding!</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_device">Device</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>


    <!-- ***** Status Menu -->
    <string name="title_status_device">Device</string>
    <string name="title_status_peers">Peers</string>
    <string name="title_status_logs">Logs</string>

    <!-- ***** General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_airplane_mode">Airplane Mode</string>
    <string name="pref_title_display_name">Your Alias</string>
    <string name="pref_title_ble_mac">Bluetooth Address</string>
    <string name="pref_title_ble_name">Bluetooth Name</string>
    <string name="pref_default_display_name">Gordon</string>
    <string name="pref_default_ble_mac"></string>

    <string-array name="pref_bandwidth_titles">
        <item>62.5 kHz</item>
        <item>125 kHz</item>
        <item>250 kHz</item>
        <item>500 kHz</item>
    </string-array>
    <string-array name="pref_bandwidth_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="pref_codingrate_titles">
        <item>4/5</item>
        <item>4/6</item>
        <item>4/7</item>
        <item>4/8</item>
    </string-array>
    <string-array name="pref_codingrate_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="pref_txpower_titles">
        <item>11 dBm</item>
        <item>12 dBm</item>
        <item>13 dBm</item>
        <item>14 dBm</item>
        <item>15 dBm</item>
        <item>16 dBm</item>
        <item>17 dBm</item>
        <item>18 dBm</item>
        <item>19 dBm</item>
        <item>20 dBm</item>
        <item>21 dBm</item>
        <item>22 dBm</item>
        <item>23 dBm</item>
        <item>24 dBm</item>
        <item>25 dBm</item>
        <item>26 dBm</item>
        <item>27 dBm</item>
    </string-array>
    <string-array name="pref_txpower_values">
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
    </string-array>

    <!-- Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Enable Notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_scanning">ScanningActivity</string>

    <string name="channel_name">DSC New Message</string>
    <string name="channel_description">New Messages Inbound from LoRa</string>
    <string name="title_activity_usb_ble_pairing">UsbBlePairingActivity</string>
    <string name="title_activity_scanning_upgrade">ScanningActivityUpgrade</string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
