<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.bbqresearch.roomwordsample.io.bbqresearch.dsc.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_messages"
        android:orderInCategory="100"
        android:title="@string/action_clear_msgs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/action_scan"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sync_datetime"
        android:orderInCategory="100"
        android:title="@string/action_sync_datetime"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:title="@string/action_connect"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_disconnect"
        android:orderInCategory="100"
        android:title="@string/action_disconnect"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_status"
        android:orderInCategory="100"
        android:title="@string/action_status"
        app:showAsAction="never" />
</menu>
